* updates to response queue, made configurable, use timeouts, defaults to off, added stats for queue